approval summary describtion overflow issue fixed and labels change

--- a/src/components/commonCss/style.scss
+++ b/src/components/commonCss/style.scss
@@ -6968,7 +6968,6 @@ left: 17rem;
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
-    -webkit-box-align: center;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     padding-top: 18px;
@@ -6978,16 +6977,21 @@ left: 17rem;
   }
   .conversion-cost {
     .text-overflow {
-      max-width: 100%;
+      width: 100%;
+      max-width: 230px;
     }
   }
 }
 .one-line-overflow {
+  width: fit-content;
   max-width: 150px;
   overflow: hidden;
   text-overflow: ellipsis;
   display: block;
   white-space: nowrap;
+  &.describtion {
+    max-width: 190px;
+  }
 }
 // <-------------END Hover text overflow and show on hover  css----------->
 
